# Ethernet_RaspberryPico

./: CMakeLists.txt  main.c
rmii_phy/: CMakeLists.txt  rmii_phy.c  rmii_phy.h  rmii_phy_read.pio  rmii_phy_write.pio
